# fv-hs

./: .gitignore  README.md  fv.cabal  neuneu  package.yaml  stack.yaml  test.hs
app/: FVT.hs
src/: Coeff.hs  Fit.hs  Matrix.hs  Stuff.hs  Types.hs  coeff.hs  fit.hs  fvt.hs  matrix.hs  types.hs
src/Data/: Chol.hs  Cov.hs  SimpleMatrix.hs
src/Data/Cov/: Cov.hs  Jac.hs  Vec.hs
src/FV/: Coeff.hs  Coeff.hs.save  Fit.hs  Jacob.hs  Matrix.hs  Types.hs  Types.hs.save
src/FVT/: Cluster.hs  Input.hs  Probability.hs  Random.hs  Test.hs
src/Prelude/: Extended.hs
src/Test/: Cluster.hs  Cluster.hs.save  FVT.hs  Hist.hs  Input.hs  Input.hs.save  Probability.hs  Random.hs  Random.hs.save  Test.hs  Test.hs.save
test/: Cluster.hs  FVT.hs  Input.hs  LibSpec.hs  Random.hs  Tests.hs  input.hs  tests.hs
