name:                fv
version:             0.1.0.0
synopsis:            haskell implementation of FV vertex fitting package
description:         Please see README.md
homepage:            https://github.com/LATBauerdick/fv.hs#readme
license:             BSD3
license-file:        LICENSE
author:              LATBauerdick
maintainer:          github@bauerdick.org
copyright:           Copyright: (c) 1991, 2017 LATBauerdick
category:            HEP
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

source-repository head
  type:     git
  location: https://github.com/LATBauerdick/fv.hs

library
  ghc-options:         -Wall
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  hs-source-dirs:     src
  exposed-modules:    FV.Fit
                    , FV.Types
                    , FV.Coeff
                    , Data.SimpleMatrix
                    , Data.Cov
                    , Test.Input
                    , Test.Random
                    , Test.Probability
                    , Test.Cluster
                    , Test.Test
  build-depends:      base >= 4.7 && < 5
                    , text
                    , matrix
                    , mtl
                    , interpolate
                    , random
                    , vector
                    , parallel
                    , normaldistribution
                    , statistics
                    , gamma
                    , Histogram
                    , gnuplot
                    , split
                    , directory
                    , probability
  default-language:   Haskell2010

executable fvt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  main-is:            FVT.hs
  build-depends:      base >= 4.7 && < 5
                    , fv
  hs-source-dirs:     app
  default-language:   Haskell2010

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fv
                     , hspec
                     , QuickCheck

