name:                fv
version:             0.1.0.0
synopsis:            haskell implementation of FV vertex fitting package
description:         Please see README.md
homepage:            https://github.com/LATBauerdick/fv.hs#readme
license:             BSD3
license-file:        LICENSE
author:              LATBauerdick
maintainer:          github@bauerdick.org
copyright:           Copyright: (c) 1991, 2017 LATBauerdick
category:            HEP
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

source-repository head
  type:     git
  location: https://github.com/LATBauerdick/fv.hs

library
  ghc-options:       -Wall -Wno-unused-imports -Wno-unused-top-binds -Wno-type-defaults -Wno-name-shadowing -Wno-orphans
  default-extensions: NoImplicitPrelude
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , LambdaCase
                    , MultiWayIf
                    , NamedFieldPuns
                    , TupleSections
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DerivingStrategies
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , BangPatterns
                    , KindSignatures
                    , TypeOperators
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , ConstraintKinds
                    , RankNTypes
--                    , ApplicativeDo
                    , DefaultSignatures
                    , PatternSynonyms
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , GADTs
                    , DataKinds
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , ExplicitForAll
                    , OverloadedLists
                    , DisambiguateRecordFields
  hs-source-dirs:     src
  exposed-modules:    FV.Fit
                    , FV.Types
                    , FV.Jacob
                    , Prelude.Extended
                    , Data.Cov
                    , Data.Cov.Cov
                    , Data.Cov.Jac
                    , Data.Cov.Vec
                    , Data.Chol
                    , Test.FVT
                    , Test.Input
                    , Test.Random
                    , Test.Cluster
                    , Test.Probability
  build-depends:      base >= 4.7 && < 5
                    , text
                    , semigroups
                    , matrix
                    , mtl
                    , interpolate
                    , random
                    , vector
                    , parallel
                    , normaldistribution
                    , statistics
                    , continued-fractions
                    , gamma
                    , Histogram
                    , gnuplot
                    , split
                    , directory
                    , probability
                    , loop
                    , time
                    , lens
                     , colour
                     , data-default-class
                     , Chart
                     , Chart-diagrams
                     , diagrams-solve
  default-language:   Haskell2010

executable fvt
  ghc-options: -Wall -Wunused-imports -Wno-unused-top-binds -Wno-type-defaults -Wno-name-shadowing -Wno-orphans -threaded -rtsopts -with-rtsopts=-N -Werror
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  main-is:            FVT.hs
  build-depends:      base >= 4.7 && < 5
                    , fv
  hs-source-dirs:     app
  default-language:   Haskell2010

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fv
                     , hspec
                     , QuickCheck

